--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "watch-css": "tailwindcss -i src/styles.css -o public/styles.css --watch",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
