--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "watch-css": "tailwindcss -i src/styles.css -o public/styles.css --watch",
+    "watch-css": "tailwindcss -i src/App.css -o public/App.css --watch",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
