--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
     "postcss": "^8.4.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
